--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #d3d3d3;
+  background-color: #ef1829;
   overflow-x: hidden;
 }
 
