--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,10 +21,9 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #5b92e5;
+  background-color: #d3d3d3;
   overflow-x: hidden;
 }
-
 
 /* Side navigation links */
 .sidenav a {
@@ -47,3 +46,22 @@ body {
   padding-right: 20px;
   text-align: justify;
 }
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 15px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:600px) {
+  .column {
+    width: 100%;
+  }
